<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Background image -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_football_ball"
        android:rotation="@dimen/background_image_rotation"
        android:src="@drawable/football_ball" />

    <!-- Home team -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="@dimen/width_handled_by_weight"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_one"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/top_margin"
                android:fontFamily="sans-serif-medium"
                android:text="@string/home_team"
                android:textColor="@color/textTeamsColor"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/home_team_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_between_buttons"
                android:fontFamily="sans-serif-light"
                android:text="@string/home_team_score"
                android:textColor="@color/textScoreColor"
                android:textSize="@dimen/score_num_font_size"
                tools:targetApi="jelly_bean" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_buttons"
                android:layout_marginLeft="@dimen/margin_between_buttons"
                android:layout_marginRight="@dimen/margin_between_buttons"
                android:onClick="homeTouchDownPts"
                android:text="@string/touch_down_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_buttons"
                android:layout_marginLeft="@dimen/margin_between_buttons"
                android:layout_marginRight="@dimen/margin_between_buttons"
                android:onClick="homeExtraPoint"
                android:text="@string/extra_point_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_buttons"
                android:layout_marginLeft="@dimen/margin_between_buttons"
                android:layout_marginRight="@dimen/margin_between_buttons"
                android:onClick="homeFieldGoalPts"
                android:text="@string/field_goal_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_between_buttons"
                android:layout_marginRight="@dimen/margin_between_buttons"
                android:onClick="homeConvSafetyPts"
                android:text="@string/conversion_safety_button" />

        </LinearLayout>

        <!-- Guests team -->
        <LinearLayout
            android:layout_width="@dimen/width_handled_by_weight"
            android:layout_height="wrap_content"
            android:layout_weight="@dimen/weight_one"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/top_margin"
                android:fontFamily="sans-serif-medium"
                android:text="@string/guests_team"
                android:textColor="@color/textTeamsColor"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                tools:targetApi="jelly_bean" />

            <TextView
                android:id="@+id/guests_team_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_between_buttons"
                android:fontFamily="sans-serif-light"
                android:text="@string/guests_team_score"
                android:textColor="@color/textScoreColor"
                android:textSize="@dimen/score_num_font_size"
                tools:targetApi="jelly_bean" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_buttons"
                android:layout_marginLeft="@dimen/margin_between_buttons"
                android:layout_marginRight="@dimen/margin_between_buttons"
                android:onClick="guestsTouchDownPts"
                android:text="@string/touch_down_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_buttons"
                android:layout_marginLeft="@dimen/margin_between_buttons"
                android:layout_marginRight="@dimen/margin_between_buttons"
                android:onClick="guestsExtraPoint"
                android:text="@string/extra_point_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_buttons"
                android:layout_marginLeft="@dimen/margin_between_buttons"
                android:layout_marginRight="@dimen/margin_between_buttons"
                android:onClick="guestsFieldGoalsPts"
                android:text="@string/field_goal_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_between_buttons"
                android:layout_marginRight="@dimen/margin_between_buttons"
                android:onClick="guestsConvSafetyPts"
                android:text="@string/conversion_safety_button" />
        </LinearLayout>
    </LinearLayout>

    <!-- Reset button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_between_buttons"
        android:onClick="reset"
        android:text="@string/reset_button" />

</RelativeLayout>